--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,6 +2,7 @@
   font-family: "cascadia code", monospace ;
   line-height: 1.5;
   font-weight: 400;
+  padding: 20px;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
